BaselineLSTM/logs/tuning/grid_46021126_4.err
  File "/home/kongw0a/MTS_LSTM/experiment_withcursor/BaselineLSTM/Train.py", line 447
    f.write('ok
            ^
SyntaxError: unterminated string literal (detected at line 447)
